<resources>
    <string name="app_name" translatable="false">Xposed One Tap Video Download</string>
    <string name="app_description" translatable="false">Downloads any video expect Youtube Videos</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_videos">Clear URL List</string>
    <string name="url_log">URL Log</string>
    <string name="prefs_open_url_log">Open URL Log</string>
    <string name="no_data_available">URL Log Empty</string>
    <string name="pref_url_logging_title">Enable URL logging</string>
    <string name="pref_url_logging_summary">Log URLs to view them later on</string>
    <string name="pref_url_logging_header">URL Logging</string>
    <string name="pref_notification_header">Notification Settings</string>
    <string name="pref_notification_enable_title">Enable Notifications</string>
    <string name="pref_notification_enable_summary">Notifications for videos being streamed</string>
    <string name="pref_notification_count_title">Maximum No. of Notifications</string>
    <string name="pref_notification_dismiss_time_title">Notification Dismiss Time</string>
    <string name="xposed_not_found_title">Xposed Framework not found</string>
    <string name="xposed_not_found_description">You need root and Xposed Framework to use this application</string>
    <string name="module_not_enabled_title">Module not enabled or Needs Reboot</string>
    <string name="module_not_enabled_description">You need to enable this module in Xposed Installer. If you already have enabled it, please reboot your device.</string>
    <string name="notification_dismiss_time">30</string>
    <string name="notification_count">1</string>
    <string name="permission_accepted">One Tap Video Download : Write Permission Accepted</string>
    <string name="permission_denied">One Tap Video Download : Write Permission Denied</string>
    <string name="accept_write_permission_title">Enable Storage write permission</string>
    <string name="accept_write_permission_description">You need to give write permission in order to store your videos in your phone storage.
        \n \n Steps to provide permission :
        \n 1. Press continue
        \n 2. Select Permissions
        \n 3. Enable Storage Permission
        \n 4. Restart application
    </string>
    <string name="pref_notification_vibrate_title">Vibration on Notification</string>
    <string name="pref_notification_vibrate_summary">Vibrates the device when video is being streamed</string>
    <string name="pref_notification_vibrate_amount_title">Vibration amount</string>
    <string name="default_vibrate_amount">200</string>
    <string name="pref_notification_headsup_title">Enable Heads up notification</string>
    <string name="pref_notification_headsup_summary">Heads up notification along with normal notification</string>
    <string name="prefs_download_location_title">Choose Download Directory</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="download_in_other_resolution">Download in other resolution</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="delete_from_storage">Delete from storage</string>
    <string name="details">Details</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="filename">Filename</string>
    <string name="enter_filename">Enter Filename</string>
    <string name="video_quality">Video Quality</string>
    <string name="download_location">Download Directory</string>
    <string name="download_later">Download Later</string>
    <string name="start_download">Start Download</string>
    <string name="unable_to_delete_file">Unable to delete file</string>
    <string name="file_deleted_successfully">File deleted successfully</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="delete_confirmation_content">Are you sure you want to delete the download from the storage ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_from_list_confirmation">Remove Confirmation</string>
    <string name="remove_from_list_confirmation_content">Are you sure you want to remove the download from the list ?</string>
    <string name="progress_dialog">Fetching Download Links</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="unable_to_fetch">Unable to fetch links, Please try again</string>
    <string name="invalid_url">Shared URL is invalid. Please try again.</string>
    <string name="total_size">Total Size</string>
    <string name="downloaded_size">Downloaded Size</string>
    <string name="okay">Okay</string>
    <string name="unknown_file_size">Unknown File Size</string>
    <string name="view_pager_title_downloads">Downloads</string>
    <string name="view_pager_title_settings">@string/action_settings</string>
    <string name="md_choose_label">Choose</string>
    <string name="menu_item_plus_one">Give it a +1</string>
    <string name="menu_item_rate">Rate this app</string>
    <string name="menu_item_donate">Donate</string>
    <string name="menu_item_remove_ads">Remove Ads</string>
    <string name="menu_item_purchases">Purchases</string>
    <string name="menu_item_translate">Help to translate</string>
    <string name="menu_item_help">Need Help ?</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_usage_instruction_title">Usage Instructions</string>
    <string name="usage_instruction_summary">
        \n1. Enable One Tap Video Download in Xposed Installer
        \n2. Reboot your device
        \n3. Play a video in browser
        \n4. Notification will show in notification panel with different options
        \n(Please note that  this notification will disappear automatically in 30 seconds if you haven\'t changed this setting in main application)
        \n5. Enjoy your video offline by downloading or play it using your favorite video player from the notification itself

        \nStill unable to follow? <a href="https://youtu.be/uTME1FudFmU">Watch video in English here</a>
    </string>
    <string name="about_intro">One Tap Video Download is a Free and Open Source Xposed Module which enables user to download/play video from many applications like browser, facebook etc.</string>
    <string name="about_developed_by">Developed By</string>
    <string name="about_developer_name">Ashish Bansal</string>
    <string name="about_copyright">&#169; 2016 One Tap Video Download</string>
    <string name="about_credits">Credits : Haariger Harald, ihelp101, Stefan Ivic, Deepak Sharma, Rutvik Rajagopal, Julia Yanovskaya, Open.Orange, Matheus Coelho, Carlo, Harminizer, 尹崇业 and all others who I might have forgot to specify.</string>
    <string name="donate">Donate</string>
    <string name="donate_description">Please buy premium version to remove Ads and support application development.\n\nIf you have ever contributed to this project in any possible way, please contact the developer to get a free license.</string>
    <string name="via_wallet">Via Google Wallet</string>
    <string name="via_paypal">Via Paypal</string>
    <string name="via_playstore">Via Playstore</string>
    <string name="select_donation_amount">Select Donation amount</string>
    <string name="donate_thanks_for_donation">Thanks for the donation!</string>
    <string name="donate_thanks_for_donation_summary">I\'m really glad to know that you have contributed to this project. Thanks a lot! </string>
    <string name="google_services_not_found_title">Play services not found</string>
    <string name="google_services_not_found_summary">Thanks for considering but it\'s not possible to donate without playstore being installed on device.</string>
    <string name="play_video_activity_not_found">No application found to play video.</string>
    <string name="share_video_activity_not_found">No application found to share video.</string>
    <string name="link_expired_download_again">Download link has been expired. Please add download again.</string>
    <string name="new_update_available_title">New Update Available</string>
    <string name="download">Download</string>
    <string name="copy_download_link">Copy Download Link</string>
    <string name="video_url_copied">Video URL copied</string>
    <string name="banner_ad_unit_id">ca-app-pub-4007739214025921/3192567694</string>
    <string name="ad_switch">Ad Switch</string>
    <string name="ad_enabled">Thanks for enabling ads!</string>
    <string name="ad_disabled">Application restart is required to observe changes.</string>
    <string name="no_downloads">Empty Download List</string>
    <string name="action_add_domain">Blacklist New Domain</string>
    <string name="action_clear_domain">Remove all URLs</string>
    <string name="prefs_open_blacklist_domain_log">Open Blacklisted Domains</string>
    <string name="no_blacklisted_domains">No Blacklisted Domains</string>
    <string name="blacklisted_domains">Blacklisted Domains</string>
    <string name="add_new_domain">Add New Domain</string>
    <string name="blacklist_domain_hint">http://foo.bar</string>
    <string name="blacklist_domain_copied">Blacklisted Domain Copied</string>
    <string name="edit_blacklisted_domain">Edit Blacklisted Domain</string>
    <string name="edit">Edit</string>
    <string name="invalid_domain">Invalid Domain Name entered</string>
    <string name="empty"></string>
    <string name="download_url">Download URL</string>
    <string name="copy_url">Copy URL</string>
    <string name="unable_to_file_file">Unable to find file </string>
    <string name="pref_other_header">Other Preferences </string>
    <string name="prefs_enable_startup_errors_title">Enable Xposed related Startup Errors</string>
    <string name="prefs_enable_startup_errors_summary">Checks module requirements and reports if something is wrong.</string>
    <string name="feature_removed">Feature Removed</string>
    <string name="youtube_share_intent_removed">I\'m sorry to inform you that because of YouTube terms and conditions, this feature has been removed from the application.</string>
    <string name="internet_not_available">Unable to access Internet</string>
    <string name="internet_not_available_summary">Application is unable to access internet. Please enable WiFi or data services.</string>
    <string name="open_wifi_settings">Open WiFi Settings</string>
    <string name="fetching_hook_classes">Fetching Hook Class Names</string>
    <string name="error_fetching_file">Error fetching file</string>
    <string name="unable_to_write_file">Unable to write downloaded file</string>
    <string name="hooks_successfully_updated">Hooks successfully updated!</string>
    <string name="menu_item_update_hooks">Update Hooks</string>
    <string name="unable_to_select_sd_card">"Unable to write on selected directory. On some devices, it's not possible to select External SD Card, please use XInternalSD Xposed Module in that case."</string>
    <string name="video_url">Video URL</string>
    <string name="pref_general_header">General Options</string>
    <string name="pref_disable_module_temp_title">Disable Module Temporarily</string>
    <string name="pref_disable_module_temp_summary">Disables Module Temporarily, skipping url logging and notifications</string>
    <string name="pref_enable_dark_theme_title">Enable Dark Theme</string>
    <string name="pref_enable_dark_theme_summary">Dark theme for sensitive eyes</string>
    <string name="youtube_next_video_title">Play next Video</string>
    <string name="youtube_next_video_summary">Notification for downloading videos from YouTube will appear from next video. So, please skip this video and play the next video.</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="redeem_promo_code">Redeem Promo Code</string>
</resources>