<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="@string/pref_general_header">
        <SwitchPreference
            android:title="@string/pref_disable_module_temp_title"
            android:summary="@string/pref_disable_module_temp_summary"
            android:key="pref_module_disabled"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/pref_enable_dark_theme_title"
            android:summary="@string/pref_enable_dark_theme_summary"
            app:asp_tintEnabled="false"
            android:key="pref_dark_theme_enabled"
            android:defaultValue="false" />

        <Preference
            android:title="@string/prefs_download_location_title"
            android:key="pref_download_location">
        </Preference>

        <Preference
            android:title="@string/prefs_open_blacklist_domain_log">
            <intent android:action="com.phantom.onetapvideodownload.ui.domainblacklist.BlacklistDomainActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_url_logging_header">
        <SwitchPreference
            android:title="@string/pref_url_logging_title"
            android:summary="@string/pref_url_logging_summary"
            android:defaultValue="true"
            android:key="pref_url_logging"/>

        <Preference
            android:title="@string/prefs_open_url_log"
            android:dependency="pref_url_logging">
            <intent android:action="com.phantom.onetapvideodownload.ui.urllog.UrlLogActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_notification_header">
        <SwitchPreference
            android:title="@string/pref_notification_enable_title"
            android:summary="@string/pref_notification_enable_summary"
            android:defaultValue="true"
            android:key="pref_notification"/>

        <SwitchPreference
            android:title="@string/pref_notification_headsup_title"
            android:summary="@string/pref_notification_headsup_summary"
            android:defaultValue="false"
            android:key="pref_headsup"
            android:dependency="pref_notification"
            tools:targetApi="21"/>

        <SwitchPreference
            android:title="@string/pref_notification_vibrate_title"
            android:summary="@string/pref_notification_vibrate_summary"
            android:defaultValue="false"
            android:key="pref_vibrate"
            android:dependency="pref_notification"/>

        <ListPreference
            android:key="pref_vibrate_amount"
            android:title="@string/pref_notification_vibrate_amount_title"
            android:defaultValue="@string/default_vibrate_amount"
            android:entries="@array/pref_vibrate_amount_titles"
            android:entryValues="@array/pref_vibrate_amount_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="pref_vibrate"
            app:asp_iconPaddingEnabled="false"/>

        <ListPreference
            android:key="pref_notification_count"
            android:title="@string/pref_notification_count_title"
            android:defaultValue="@string/notification_count"
            android:entries="@array/pref_notification_count_titles"
            android:entryValues="@array/pref_notification_count_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="pref_notification"
            app:asp_iconPaddingEnabled="false"/>

        <ListPreference
            android:key="pref_notification_dismiss_time"
            android:title="@string/pref_notification_dismiss_time_title"
            android:defaultValue="@string/notification_dismiss_time"
            android:entries="@array/pref_notification_dismiss_time_titles"
            android:entryValues="@array/pref_notification_dismiss_time_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="pref_notification"
            app:asp_iconPaddingEnabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_other_header">
        <SwitchPreference
            android:title="@string/prefs_enable_startup_errors_title"
            android:summary="@string/prefs_enable_startup_errors_summary"
            android:defaultValue="true"
            android:key="prefs_enable_startup_errors"/>
    </PreferenceCategory>

</PreferenceScreen>
