<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_url_logging_header">
        <SwitchPreference
            android:title="@string/pref_url_logging_title"
            android:summary="@string/pref_url_logging_summary"
            android:defaultValue="true"
            android:key="pref_url_logging"/>

        <Preference
            android:title="@string/prefs_open_url_log"
            android:dependency="pref_url_logging">
            <intent android:action="com.phantom.onetapvideodownload.UrlLog" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_notification_header">
        <SwitchPreference
            android:title="@string/pref_notification_enable_title"
            android:summary="@string/pref_notification_enable_summary"
            android:defaultValue="true"
            android:key="pref_notification"/>

        <ListPreference
            android:key="pref_notification_count"
            android:title="@string/pref_notification_count_title"
            android:defaultValue="@string/notification_count"
            android:entries="@array/pref_notification_count_titles"
            android:entryValues="@array/pref_notification_count_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="pref_notification"
            app:asp_iconPaddingEnabled="false"/>

        <ListPreference
            android:key="pref_notification_dismiss_time"
            android:title="@string/pref_notification_dismiss_time_title"
            android:defaultValue="@string/notification_dismiss_time"
            android:entries="@array/pref_notification_dismiss_time_titles"
            android:entryValues="@array/pref_notification_dismiss_time_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="pref_notification"
            app:asp_iconPaddingEnabled="false"/>
    </PreferenceCategory>

</PreferenceScreen>
