<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0sp"
    tools:context=".ui.About">

    <com.phantom.onetapvideodownload.ui.views.InstagramView
        android:id="@+id/instagramView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            ext:documentView_antialias="true"
            ext:documentView_cacheConfig="auto_quality"
            ext:documentView_insetPaddingBottom="15sp"
            ext:documentView_insetPaddingLeft="15sp"
            ext:documentView_insetPaddingRight="15sp"
            ext:documentView_insetPaddingTop="15sp"
            ext:documentView_lineHeightMultiplier="1.5"
            ext:documentView_maxLines="10"
            ext:documentView_reverse="false"
            ext:documentView_text="@string/about_intro"
            ext:documentView_textAlignment="justified"
            ext:documentView_textColor="@android:color/white"
            ext:documentView_textFormat="plain"
            ext:documentView_textSize="15sp" />

        <ImageView
            android:id="@+id/launcher_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:paddingTop="20sp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/launcher_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/about_developed_by"
            android:paddingTop="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developed_by"
            android:layout_centerHorizontal="true"
            android:text="@string/about_developer_name"
            android:textColor="@color/white"
            android:paddingTop="5sp"
            android:textStyle="bold" />

        <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developer_name"
            android:layout_centerHorizontal="true"
            android:paddingTop="20sp"
            ext:documentView_antialias="true"
            ext:documentView_cacheConfig="auto_quality"
            ext:documentView_insetPaddingBottom="15sp"
            ext:documentView_insetPaddingLeft="15sp"
            ext:documentView_insetPaddingRight="15sp"
            ext:documentView_insetPaddingTop="15sp"
            ext:documentView_lineHeightMultiplier="1.5"
            ext:documentView_maxLines="10"
            ext:documentView_reverse="false"
            ext:documentView_text="@string/about_credits"
            ext:documentView_textAlignment="justified"
            ext:documentView_textColor="@android:color/white"
            ext:documentView_textFormat="plain"
            ext:documentView_textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15sp"
        android:text="@string/about_copyright"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>
